--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Gantcho Kojuharov <gantcho@greyarch.net> (http://greyarch.net)",
   "license": "ISC",
   "dependencies": {
-    "testx": "^0.1.6"
+    "lodash": "^3.7.0",
+    "testx": "0.1.8"
   }
 }
