--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "index.coffee",
   "scripts": {
@@ -10,6 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "lodash": "^3.7.0",
-    "testx": "0.1.8"
+    "testx": "^0.3.4"
   }
 }
