--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
   "name": "test",
-  "version": "1.2.0",
+  "version": "2.0.0",
   "description": "",
   "main": "index.coffee",
   "author": "Gantcho Kojuharov <gantcho@greyarch.net> (http://greyarch.net)",
   "license": "ISC",
   "dependencies": {
-    "excel-parser": "^0.2.2",
     "lodash": "^3.7.0",
-    "testx": "^1.0.0",
-    "testx-ictu-reporter": "^0.2.0",
-    "testx-pdf-keywords": "^0.2.0",
-    "xlsx": "^0.8.0",
-    "xlsx-rows": "^1.0.0"
+    "testx": "^1.5.0",
+    "testx-jasmine-reporters": "^1.0.0",
+    "testx-pdf-keywords": "^0.3.0"
   }
 }
