--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "test",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "",
   "main": "index.coffee",
   "author": "Gantcho Kojuharov <gantcho@greyarch.net> (http://greyarch.net)",
   "license": "ISC",
   "dependencies": {
     "lodash": "^3.7.0",
-    "testx": "^1.5.2",
-    "testx-jasmine-reporters": "^1.0.0",
+    "testx": "^1.11.0",
+    "testx-jasmine-reporters": "^1.1.1",
     "testx-pdf-keywords": "^0.3.0"
+  },
+  "scripts": {
+    "test": "protractor conf.coffee"
   }
 }
