updated for testx@2.0

--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
   "name": "test",
-  "version": "2.2.0",
+  "version": "2.3.0",
   "description": "",
   "main": "index.coffee",
   "author": "Gantcho Kojuharov <gantcho@greyarch.net> (http://greyarch.net)",
   "license": "ISC",
   "dependencies": {
-    "lodash": "^3.7.0",
-    "testx": "^1.11.0",
+    "lodash": "^4.16.4",
+    "testx": "^2.0.1",
     "testx-jasmine-reporters": "^1.1.1",
-    "testx-pdf-keywords": "^0.3.0",
-    "testx-yaml-parser": "^0.1.2"
+    "testx-pdf-keywords": "^0.3.0"
   },
   "scripts": {
-    "test": "protractor conf.coffee",
-    "test-docker": "docker run --rm -it -v `pwd`:/work --net=host testx/protractor conf.coffee"
+    "test": "docker run --rm -it -v `pwd`:/work --net=host testx/protractor conf.coffee",
+    "test-local": "protractor conf.coffee"
   }
 }
