--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "test",
-  "version": "2.3.0",
+  "name": "testx-quickstart",
+  "version": "3.0.0",
   "description": "",
   "main": "index.coffee",
   "author": "Gantcho Kojuharov <gantcho@greyarch.net> (http://greyarch.net)",
   "license": "ISC",
   "dependencies": {
     "lodash": "^4.16.4",
-    "testx": "^2.0.1",
+    "testx": "^2.1.1",
     "testx-jasmine-reporters": "^1.1.1",
     "testx-pdf-keywords": "^0.3.0"
   },
