moved to testx@2.4.1

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "ISC",
   "dependencies": {
     "lodash": "^4.16.4",
-    "testx": "^2.2.1",
+    "testx": "^2.4.1",
     "testx-jasmine-reporters": "^1.1.1",
     "testx-pdf-keywords": "^0.3.0",
     "testx-standard-objects": "^0.1.1"
@@ -15,5 +15,9 @@
   "scripts": {
     "test": "docker run --rm -it -u `id -u`:`id -g` -v `pwd`:/work --net=host testx/protractor conf.coffee",
     "test-local": "protractor conf.coffee"
+  },
+  "testx": {
+    "logScript": true,
+    "actionTimeout": 4000
   }
 }
