--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "testx-quickstart",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "description": "",
   "main": "index.coffee",
   "author": "Gantcho Kojuharov <gantcho@greyarch.net> (http://greyarch.net)",
   "license": "ISC",
   "dependencies": {
     "lodash": "^4.16.4",
-    "testx": "^2.4.1",
+    "testx": "^2.6.0",
     "testx-jasmine-reporters": "^1.1.1",
-    "testx-pdf-keywords": "^0.3.0",
     "testx-standard-objects": "^0.1.1"
   },
   "scripts": {
@@ -17,7 +16,7 @@
     "test-local": "protractor conf.coffee"
   },
   "testx": {
-    "logScript": true,
-    "actionTimeout": 4000
+    "logScript": false,
+    "actionTimeout": 5000
   }
 }
