--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "testx-quickstart",
   "version": "4.0.0",
-  "description": "",
+  "description": "Seed testx project.",
   "main": "index.coffee",
   "author": "Gantcho Kojuharov <gantcho@greyarch.net> (http://greyarch.net)",
   "license": "ISC",
